--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -144,6 +144,7 @@
                 </td></tr>
                 <tr><td>throttleSecs</td><td>{{throttleSecs}} secs</td></tr>
                 <tr><td>scrapeIntervalMins</td><td>{{scrapeIntervalMins}} mins</td></tr>
+                <tr><td>electionAfterpartyMins</td><td>{{electionAfterpartyMins}} mins</td></tr>
                 <tr><td>duplicateResponseText</td><td>{{duplicateResponseText}}</td></tr>
                 <tr><td>maxMessageLength</td><td>{{maxMessageLength}}</td></tr>
                 <tr><td>maxMessageParts</td><td>{{maxMessageParts}}</td></tr>
