--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -156,6 +156,7 @@
                 <tr><td>feedbackUrl</td><td>{{{url feedbackUrl}}}</td></tr>
                 <tr><td>repoUrl</td><td>{{{url repoUrl}}}</td></tr>
                 <tr><td>flags</td><td>{{> deep flags}}</td></tr>
+                <tr><td>herokuDynos</td><td>{{> deep herokuDynos}}</td></tr>
             </table>
             {{/with}}
         </aside>
