--- a/src/server/static/css/styles.css
+++ b/src/server/static/css/styles.css
@@ -30,6 +30,7 @@ h5,
 h6 {
   margin: 1.3em 0 0.5em;
 }
+
 h1:first-child {
   margin-top: 10px;
 }
@@ -38,6 +39,7 @@ h1 {
   font-size: 1.4em;
   color: var(--heading-colour);
 }
+
 h2 {
   font-size: 1.2em;
   color: var(--heading-colour);
@@ -46,9 +48,11 @@ h2 {
 nav {
   font-size: var(--smaller-font-size);
 }
+
 nav .navitem {
   text-decoration: none;
 }
+
 nav .navitem:last-child {
   font-weight: bold;
 }
@@ -58,6 +62,7 @@ ul {
   padding-inline-start: 20px;
   padding-left: 20px;
 }
+
 li {
   margin: 0.2em 0;
 }
@@ -65,6 +70,7 @@ li {
 a {
   color: var(--link-colour);
 }
+
 a:visited {
   color: var(--text-colour);
 }
@@ -74,7 +80,7 @@ blockquote {
 }
 
 h2 + table {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 table {
@@ -82,6 +88,7 @@ table {
   width: 100%;
   margin: 2em 0;
 }
+
 table.smaller-table {
   margin: 1em 0;
   font-size: var(--smaller-font-size);
@@ -119,6 +126,17 @@ th {
 td .list {
   margin: 0;
   font-size: var(--smaller-font-size);
+}
+
+/* Smaller tables */
+table.table-small {
+  font-size: var(--smaller-font-size);
+}
+
+table.small th,
+table.small td {
+  min-width: 0;
+  padding: 3px 8px;
 }
 
 /* Nested tables */
@@ -173,12 +191,15 @@ form {
   max-width: 800px;
   margin: 2em 0 3em;
 }
+
 form * {
   font-size: 0.9rem;
 }
+
 form label {
   font-weight: bold;
 }
+
 form input,
 form textarea {
   display: block;
@@ -188,17 +209,21 @@ form textarea {
   border-radius: 5px;
   border: 1px solid var(--border-color);
 }
+
 form input::placeholder {
   color: #ccc;
   font-size: var(--smaller-font-size);
 }
+
 form textarea {
   min-height: 130px;
 }
+
 form button {
   padding: 8px 20px;
   font-size: 1em;
 }
+
 form .form-controls {
   margin: 1.5em 0;
 }
@@ -210,14 +235,17 @@ form .form-controls {
   align-items: start;
   max-width: 1400px;
 }
+
 .dashboard section {
   flex: 1 1 calc(33% - var(--margin-size));
   max-width: 48%;
   margin-right: var(--margin-size);
 }
+
 .dashboard section:last-child {
   margin-right: 0;
 }
+
 .dashboard section aside {
   margin-bottom: var(--margin-size);
 }
@@ -228,10 +256,12 @@ form .form-controls {
   border-radius: 5px;
   font-size: 1.15em;
 }
+
 .result.success {
   color: darkgreen;
   background-color: rgb(248, 255, 238);
 }
+
 .result.error {
   color: indianred;
   background-color: rgb(255, 238, 238);
@@ -241,6 +271,7 @@ form .form-controls {
   font-weight: bold;
   color: green;
 }
+
 .falsy {
   font-weight: bold;
   color: indianred;
@@ -250,13 +281,16 @@ form .form-controls {
 .relativetime {
   white-space: nowrap;
 }
+
 .relativetime {
   font-style: italic;
 }
+
 .relativetime:not(:empty)::before {
   content: "(";
   font-style: normal;
 }
+
 .relativetime:not(:empty)::after {
   content: ")";
   font-style: normal;
@@ -276,6 +310,7 @@ form .form-controls {
 [data-prefix]:before {
   content: attr(data-prefix);
 }
+
 [data-suffix]:after {
   content: attr(data-suffix);
 }
@@ -283,9 +318,11 @@ form .form-controls {
 .mt10 {
   margin-top: 10px;
 }
+
 .mt20 {
   margin-top: 20px;
 }
+
 .mt40 {
   margin-top: 40px;
 }
@@ -335,11 +372,12 @@ form .form-controls {
   table.nested table.nested {
     margin: 0;
   }
-  
+
   table thead,
   table.nested thead {
     display: none;
   }
+
   table.nested tr {
     display: flex;
     flex-wrap: wrap;
@@ -381,6 +419,7 @@ form .form-controls {
   td:first-child {
     font-weight: bold;
   }
+
   th:last-child,
   td:last-child {
     min-width: 0;
