--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -168,7 +168,7 @@
             <table>
                 {{#each herokuDynos}}
                 <tr>
-                    <td>{{@key}}</td>
+                    <td class="minw-0">{{@key}}</td>
                     {{#if (isObj this)}}
                     <td>{{> deep this}}</td>
                     {{else}}
