--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -187,50 +187,69 @@
         <aside>
             <h2>Room Activity</h2>
             <table>
-                <tr><td>lastActivityTime</td><td>{{utcTimestamp lastActivityTime}} <span class="relativetime" title="{{utcTimestamp lastActivityTime}}"></span></td></tr>
-                <tr><td>lastMessageTime</td>
-                    {{#if lastMessageTime}}
-                    <td>{{utcTimestamp lastMessageTime}} <span class="relativetime" title="{{utcTimestamp lastMessageTime}}"></span></td>
-                    {{else}}
-                    <td></td>
-                    {{/if}}
-                </tr>
-                <tr><td>lastBotMessage</td><td>
-                    <pre>{{lastBotMessage}}</pre>
-                    <div class="mt10">{{{lastBotMessageHtml}}}</div>
+                <tr><td>Fun</td><td>
+                    <table class="nested">
+                        <tr><td>funResponseCounter</td><td>{{funResponseCounter}}</td></tr>
+                        <tr><td>maxFunResponses</td><td>{{maxFunResponses}}</td></tr>
+                        <tr><td>canSendFunResponse</td><td>{{{boolean canSendFunResponse}}}</td></tr>
+                    </table>
                 </td></tr>
-                <tr><td>ignoreSelf</td><td>{{{boolean ignoreSelf}}}</td></tr>
-                <tr><td>funResponseCounter</td><td>{{funResponseCounter}}</td></tr>
-                <tr><td>maxFunResponses</td><td>{{maxFunResponses}}</td></tr>
-                <tr><td>canSendFunResponse</td><td>{{{boolean canSendFunResponse}}}</td></tr>
-                <tr><td>activityCounter</td><td>{{activityCounter}}</td></tr>
-                <tr><td>minActivityCountThreshold</td><td>{{minActivityCountThreshold}}</td></tr>
-                <tr><td>roomReachedMinActivityCount</td><td>{{{boolean roomReachedMinActivityCount}}}</td></tr>
-                <tr><td>maxActivityCountThreshold</td><td>{{maxActivityCountThreshold}}</td></tr>
-                <tr><td>roomReachedMaxActivityCount</td><td>{{{boolean roomReachedMaxActivityCount}}}</td></tr>
-                <tr><td>shortIdleDurationMins</td><td>{{shortIdleDurationMins}} mins</td></tr>
-                <tr><td>roomBecameIdleAWhileAgo</td><td>{{{boolean roomBecameIdleAWhileAgo}}}
-                    {{#unless roomBecameIdleAWhileAgo}}
-                    <span class="relativetime" title="{{utcTimestamp roomBecameIdleAWhileDate}}"></span>
-                    {{/unless}}
+                
+                <tr><td>Activity</td><td>
+                    <table class="nested">
+                        <tr><td>lastActivityTime</td><td>{{utcTimestamp lastActivityTime}} <span class="relativetime" title="{{utcTimestamp lastActivityTime}}"></span></td></tr>
+                        <tr><td>activityCounter</td><td>{{activityCounter}}</td></tr>
+                        <tr><td>minActivityCountThreshold</td><td>{{minActivityCountThreshold}}</td></tr>
+                        <tr><td>roomReachedMinActivityCount</td><td>{{{boolean roomReachedMinActivityCount}}}</td></tr>
+                        <tr><td>maxActivityCountThreshold</td><td>{{maxActivityCountThreshold}}</td></tr>
+                        <tr><td>roomReachedMaxActivityCount</td><td>{{{boolean roomReachedMaxActivityCount}}}</td></tr>
+                    </table>
                 </td></tr>
-                <tr><td>longIdleDurationHours</td><td>{{longIdleDurationHours}} hours</td></tr>
-                <tr><td>roomBecameIdleHoursAgo</td><td>{{{boolean roomBecameIdleHoursAgo}}}
-                    {{#unless roomBecameIdleHoursAgo}}
-                    <span class="relativetime" title="{{utcTimestamp roomBecameIdleHoursDate}}"></span>
-                    {{/unless}}
+                
+                <tr><td>Room Idle</td><td>
+                    <table class="nested">
+                        <tr><td>shortIdleDurationMins</td><td>{{shortIdleDurationMins}} mins</td></tr>
+                        <tr><td>roomBecameIdleAWhileAgo</td><td>{{{boolean roomBecameIdleAWhileAgo}}}
+                            {{#unless roomBecameIdleAWhileAgo}}
+                            <span class="relativetime" title="{{utcTimestamp roomBecameIdleAWhileDate}}"></span>
+                            {{/unless}}
+                        </td></tr>
+                        <tr><td>longIdleDurationHours</td><td>{{longIdleDurationHours}} hours</td></tr>
+                        <tr><td>roomBecameIdleHoursAgo</td><td>{{{boolean roomBecameIdleHoursAgo}}}
+                            {{#unless roomBecameIdleHoursAgo}}
+                            <span class="relativetime" title="{{utcTimestamp roomBecameIdleHoursDate}}"></span>
+                            {{/unless}}
+                        </td></tr>
+                        <tr><td>shortBusyDurationMinutes</td><td>{{shortBusyDurationMinutes}} mins</td></tr>
+                        <tr><td>roomTooBusyForMinutes</td><td>{{{boolean roomTooBusyForMinutes}}}</td></tr>
+                        <tr><td>longBusyDurationHours</td><td>{{longBusyDurationHours}} hours</td></tr>
+                        <tr><td>roomTooBusyForHours</td><td>{{{boolean roomTooBusyForHours}}}</td></tr>
+                        <tr><td>lowActivityCheckMins</td><td>{{lowActivityCheckMins}} mins</td></tr>
+                    </table>
                 </td></tr>
-                <tr><td>shortBusyDurationMinutes</td><td>{{shortBusyDurationMinutes}} mins</td></tr>
-                <tr><td>roomTooBusyForMinutes</td><td>{{{boolean roomTooBusyForMinutes}}}</td></tr>
-                <tr><td>longBusyDurationHours</td><td>{{longBusyDurationHours}} hours</td></tr>
-                <tr><td>roomTooBusyForHours</td><td>{{{boolean roomTooBusyForHours}}}</td></tr>
-                <tr><td>lowActivityCheckMins</td><td>{{lowActivityCheckMins}} mins</td></tr>
-                <tr><td>botHasBeenQuiet</td><td>{{{boolean botHasBeenQuiet}}}
-                    {{#unless botHasBeenQuiet}}
-                    <span class="relativetime" title="{{utcTimestamp botWillBeQuietDate}}"></span>
-                    {{/unless}}
+                
+                <tr><td>Bot Idle</td><td>
+                    <table class="nested">
+                        <tr><td>lastMessageTime</td>
+                            {{#if lastMessageTime}}
+                            <td>{{utcTimestamp lastMessageTime}} <span class="relativetime" title="{{utcTimestamp lastMessageTime}}"></span></td>
+                            {{else}}
+                            <td></td>
+                            {{/if}}
+                        </tr>
+                        <tr><td>lastBotMessage</td><td>
+                            <pre>{{lastBotMessage}}</pre>
+                            <div class="mt10">{{{lastBotMessageHtml}}}</div>
+                        </td></tr>
+                        <tr><td>botSentLastMessage</td><td>{{{boolean botSentLastMessage}}}</td></tr>
+                        <tr><td>botHasBeenQuiet</td><td>{{{boolean botHasBeenQuiet}}}
+                            {{#unless botHasBeenQuiet}}
+                            <span class="relativetime" title="{{utcTimestamp botWillBeQuietDate}}"></span>
+                            {{/unless}}
+                        </td></tr>
+                        <tr><td>ignoreSelf</td><td>{{{boolean ignoreSelf}}}</td></tr>
+                    </table>
                 </td></tr>
-                <tr><td>botSentLastMessage</td><td>{{{boolean botSentLastMessage}}}</td></tr>
             </table>
         </aside>
     </section>
