--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -46,7 +46,7 @@
                 <tr><td>End date</td><td>{{utcTimestamp dateEnded}} <span class="relativetime" title="{{utcTimestamp dateEnded}}"></span></td></tr>
                 <tr><td>Rep. to vote</td><td>{{repVote}}</td></tr>
                 <tr><td>Rep. to nominate</td><td>{{repNominate}}</td></tr>
-                    <tr><td>Positions</td><td>{{numPositions}}</td></tr>
+                <tr><td>Positions</td><td>{{numPositions}}</td></tr>
                 <tr><td>Opavote URL</td><td>{{{url opavoteUrl}}}</td></tr>
                 <tr><td>Voter stats</td><td>{{statVoters}}</td></tr>
                 <tr><td>BLT file URL</td><td>{{{url (getter this "electionBallotURL")}}}</td></tr>
@@ -243,10 +243,17 @@
                             <td></td>
                             {{/if}}
                         </tr>
-                        <tr><td>lastBotMessage</td><td>
-                            <pre>{{lastBotMessage}}</pre>
-                            <div class="mt10">{{{lastBotMessageHtml}}}</div>
-                        </td></tr>
+                        <tr>
+                            <td>lastBotMessage</td>
+                            {{#if lastBotMessage}}
+                            <td>
+                                <pre>{{lastBotMessage}}</pre>
+                                <div class="mt10">{{{lastBotMessageHtml}}}</div>
+                            </td>
+                            {{else}}
+                            <td></td>
+                            {{/if}}
+                        </tr>
                         <tr><td>botSentLastMessage</td><td>{{{boolean botSentLastMessage}}}</td></tr>
                         <tr><td>botHasBeenQuiet</td><td>{{{boolean botHasBeenQuiet}}}
                             {{#unless botHasBeenQuiet}}
