--- a/src/server/views/config.handlebars
+++ b/src/server/views/config.handlebars
@@ -1,6 +1,6 @@
 <h1>{{{heading}}}</h1>
 
-<nav><span class="navitem">{{{url "/" "Home"}}}</span> > <span class="navitem">Config</span></nav>
+{{> breadcrumbs current=current }}
 
 <form method="post">
 
