added mount statuses to the /server route info

--- a/src/server/views/server.handlebars
+++ b/src/server/views/server.handlebars
@@ -20,6 +20,10 @@
                         <td>paths</td>
                         <td>{{> deep data/paths}}</td>
                     </tr>
+                    <tr>
+                        <td>mounted</td>
+                        <td>{{> deep data/mounted}}</td>
+                    </tr>
                 </tbody>
             </table>
         </aside>
