made 'deep' Handlebars helper look correctly when called on a top-level object; added missing page metadata (title, appName)

--- a/src/server/views/server.handlebars
+++ b/src/server/views/server.handlebars
@@ -28,13 +28,7 @@
             </table>
 
             <h2>Express Settings</h2>
-            <table>
-                <tbody>
-                    <tr>
-                        <td>{{> deep data/settings}}</td>
-                    </tr>
-                </tbody>
-            </table>
+            {{> deep data/settings top=true}}
         </aside>
     </section>
 </main>
