Express config should be a nested table

--- a/src/server/views/server.handlebars
+++ b/src/server/views/server.handlebars
@@ -24,11 +24,12 @@
                         <td>mounted</td>
                         <td>{{> deep data/mounted}}</td>
                     </tr>
+                    <tr>
+                        <td>express</td>
+                        <td>{{> deep data/settings}}</td>
+                    </tr>
                 </tbody>
             </table>
-
-            <h2>Express Settings</h2>
-            {{> deep data/settings top=true}}
         </aside>
     </section>
 </main>
