--- a/src/server/views/server.handlebars
+++ b/src/server/views/server.handlebars
@@ -32,4 +32,11 @@
             </table>
         </aside>
     </section>
+
+    <section>
+        <aside>
+            <h2>Routes</h2>
+            {{> deep data/routes top=true}}
+        </aside>
+    </section>
 </main>
