Don't break links

--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -162,7 +162,7 @@
                     <td>{{showTranscriptMessages}}</td>
                 </tr>
                 <tr><td>keepAlive</td><td>{{{boolean keepAlive}}}</td></tr>
-                <tr><td>feedbackUrl</td><td>{{{url feedbackUrl}}}</td></tr>
+                <tr><td>feedbackUrl</td><td>{{{url feedbackUrl "feedback form"}}}</td></tr>
                 <tr><td>repoUrl</td><td>{{{url repoUrl}}}</td></tr>
                 <tr><td>flags</td><td>{{> deep flags}}</td></tr>
             </table>
